# qt-stu

./: .directory  README.md
6-1/: 6-1  6-1.pro  Makefile  configure  configure.in
6-1/autom4te.cache/: output.1  requests  traces.0  traces.1
6-1/qtc_packaging/debian_harmattan/: README  changelog  control  copyright  rules
8/: 8  8.pro  Makefile  moc_cannon.cpp  moc_lcdrange.cpp
FindDialog/: FindDialog  FindDialog.pro  Makefile  finddialog.cpp  finddialog.h  moc_finddialog.cpp  ui_mainwindow.h
Hellow/: Hellow  Hellow.desktop  Hellow.pro  Hellow_harmattan.desktop  Makefile  main.cpp  moc_qmlapplicationviewer.cpp
MainWindow/: MainWindow.pro  mainwindow.cpp  mainwindow.h  mainwindow.qrc
VoiceAssist/: VoiceAssist.pro  protocol.cpp  protocol.h
build-FindDialog-Desktop_Qt_5_0_2_GCC_32bit-Debug/: FindDialog  Makefile  moc_finddialog.cpp
build-HelloWorld-Desktop_Qt_5_0_2_GCC_32bit-Debug/: HelloWorld  Makefile  moc_mainwindow.cpp
build-MainWindow-Desktop_Qt_5_0_2_GCC_32bit-Debug/: MainWindow  Makefile  moc_mainwindow.cpp  qrc_mainwindow.cpp
build-layout-Desktop_Qt_5_0_2_GCC_32bit-Debug/: Makefile  layout  moc_mainwindow.cpp
build-singalsolt-Desktop_Qt_5_0_2_GCC_32bit-Debug/: Makefile  moc_mainwindow.cpp  singalsolt
filetree/: filetree
httptest/: .directory  Makefile  httptest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp
httptest-build-desktop-Desktop_Qt_4_8_1_for_GCC__Qt_SDK____/: httptest  moc_mainwindow.cpp  ui_mainwindow.h
kuaipan/: Makefile
layout/: layout.pro  main.cpp
log4qt1/: log4qt1.pro
menuTest1/: Makefile  (+4 more)
(+7 files in other folders)
